traces/bug_819.txt
examples++-load/msh3.cpp:1976: error: DEAD_STORE
  The value written to &m (type Fem2D::Mesh3*) is never used.
Showing all 1 steps of the trace


examples++-load/msh3.cpp:1976:3: Write of unused value
1974.     ffassert(pTh);
1975.     Mesh3 &Th=*pTh;
1976.     Mesh3 *m= pTh;   // question a quoi sert *m ??
          ^
1977.     int nbv=Th.nv; // nombre de sommet 
1978.     int nbt=Th.nt; // nombre de triangles
